--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "moment": "^2.30.1",
     "next": "14.2.16",
     "next-auth": "latest",
     "next-themes": "^0.4.4",
