--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "cmdk": "1.0.4",
     "crypto": "latest",
     "date-fns": "latest",
+    "dotenv": "^17.2.2",
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
@@ -55,6 +56,7 @@
     "next": "14.2.16",
     "next-auth": "latest",
     "next-themes": "^0.4.4",
+    "node-cron": "^4.2.1",
     "nodemailer": "latest",
     "pg": "latest",
     "pg-native": "latest",
