--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "crons": [
     {
       "path": "/api/cron/publish-posts",
-      "schedule": "0 9 * * *"
+      "schedule": "* * * * *"
     }
   ],
   "env": {
